@@ -1,3 +1,8 @@
+2010-11-09  Joseph Myers  <joseph@codesourcery.com>
+
+	* c-parser.c (c_parser_struct_declaration): Handle declaration
+	specifiers followed by CPP_CLOSE_BRACE.
+
 2010-11-09  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	* config/rs6000/rs6000.md (floatsi<mode>2_lfiwax): Rewrite so
